src/objects/VisitScorePotential__c.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VisitScorePotentialGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VisitScorePotentialGroup</label>
        <referenceTo>VisitScorePotentialGroup__c</referenceTo>
        <relationshipLabel>VisitScorePotentials</relationshipLabel>
        <relationshipName>VisitScorePotentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VisitScorePotential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VisitScorePotential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VisitScorePotentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>